# raidio

./: combine.py  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: controller.ts  listener.ts  panel.html  panel.tsx  radial.html  radial.tsx  raidio.html  raidio.tsx
src-tauri/: 2.0.0-rc  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: handler.rs  keys.rs  lib.rs  process.rs  tesseract.rs  window.rs
src-tauri/src/ocr/: ocr2.rs
src/components/: Cards.tsx  ConfigParser.ts  Scanner.tsx  SetExporter.tsx  save.tsx
src/css/: raidio.css
src/lib/: AudioManager.ts  ConfigManager.ts  ExportManager.ts  PresetManager.ts  const.ts  motion.ts  utils.ts
src/listener/: Events.ts
src/widgets/: BoardTab.tsx  PresetsTab.tsx  RaidioTab.tsx  SettingsTab.tsx
