[package]
name = "raidio"
version = "0.5.0"
description = "Raidio - ArcRaiders App"
authors = ["valeart"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = ["protocol-asset", "tray-icon", "image-png" ] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-shell = "2.0.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse"
] }
tokio = { version = "1.1", features = ["full"] }
uesave = "0.3.0"
scrap = "0.5"
base64 = "0.22"
image = "0.24.9"

# DownloadVoicemeeter
reqwest = { version = "0.11", features = ["blocking"] }

[profile.dev]
debug = 1 # 2 = volle Details, 1 = nur Line-Tables (reicht meist), 0 = gar keine

[profile.dev.package."*"]
opt-level = 2 # Macht die Dependencies schneller beim Ausführen
debug = false # Deaktiviert Debug-Symbole komplett für alle externen Crates
